
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int DASMFLAG_STEP_OVER ;
 int LIMIT_CPU_TYPES (int ) ;
 int M68020_PLUS ;
 int SET_OPCODE_FLAGS (int ) ;
 char** g_cc ;
 int g_cpu_ir ;
 int g_dasm_str ;
 int sprintf (int ,char*,char*) ;

__attribute__((used)) static void d68020_trapcc_0(void)
{
 LIMIT_CPU_TYPES(M68020_PLUS);
 sprintf(g_dasm_str, "trap%-2s; (2+)", g_cc[(g_cpu_ir>>8)&0xf]);
 SET_OPCODE_FLAGS(DASMFLAG_STEP_OVER);
}
